--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,19 @@
 @import "tailwindcss";
+/* @import "tailwindcss/preflight"; */
+@tailwind utilities;
+
+.custom-screen {
+    @apply max-w-screen-xl mx-auto px-4 md:px-8;
+}
+
+.gradient-border {
+    border: 1px solid transparent;
+    background: linear-gradient(white, white), linear-gradient(25deg, rgba(209, 213, 219, 1), rgba(209, 213, 219, 1), rgba(0, 0, 0, 0.63), rgba(209, 213, 219, 1), rgba(209, 213, 219, 1));
+    background-clip: padding-box, border-box;
+    background-origin: padding-box, border-box;
+}
+
+
 
 :root {
   --background: #ffffff;
